# hashdir

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  lint.yml  publish-docker.yml  publish-pypi.yml  tests-macos.yml  tests-windows.yml  tests.yml
hashdir/: __init__.py  __main__.py  algorithms.py  cli.py  core.py  hashing.py  logging_config.py
tests/: base.py  test_core.py  test_discovery.py  test_path_handling.py  test_pinned_regression.py
